--- a/app/tpls/layout/settings-pane.html
+++ b/app/tpls/layout/settings-pane.html
@@ -1,5 +1,4 @@
 <div class="settings-pane">
-		
 	<a href="" data-toggle="settings-pane" ng-click="settingsPaneToggle()">
 		&times;
 	</a>
@@ -21,13 +20,13 @@
 					<div class="user-details">
 						
 						<h3>
-							<a href="extra-profile.html">John Smith</a>
+							<a href="extra-profile.html">Luis Oquendo</a>
 							
 							<!-- Available statuses: is-online, is-idle, is-busy and is-offline -->
 							<span class="user-status is-online"></span>
 						</h3>
 						
-						<p class="user-title">Web Developer</p>
+						<p class="user-title">Hola Mundo</p>
 						
 						<div class="user-links">
 							<a href="extra-profile.html" class="btn btn-primary">Edit Profile</a>
